crates/stackable-versioned-macros/tests/inputs/default/fail/submodule_invalid_name.stderr
error: submodules must use names which are defined as `version`s
 --> tests/inputs/default/fail/submodule_invalid_name.rs:6:9
  |
6 |         mod v1alpha2 {}
  |         ^^^
